@@ -4633,3 +4633,5 @@
          filename is less than 4 characters in disk_write() (thanks, clang
          static analyser) (Fred).
 20150104 debugger/disassemble.c: remove redundant code (Sergio).
+20150106 debugger/breakpoint.c,peripherals/disk/disk.c: avoid the use of memory
+         after it is freed (thanks, clang static analyser) (Sergio).
